# xbuild

./: .gitignore  Makefile  Makefile.in  Makefile.include.in  README.md  configure.in
autoconf-native/: Makefile
automake-native/: Makefile
bison-native/: Makefile
bzip2/: Makefile  bzip2-1.0.6-xcompile.patch
cython-native/: Makefile
expat/: Makefile
fontconfig/: Makefile
freetype2/: Makefile
gettext/: Makefile
gettext-native/: Makefile
glib/: Makefile  arm-none-linux-gnueabi.cache
glib-native/: Makefile
help2man-native/: Makefile
libffi/: Makefile
libffi-native/: Makefile
libgcrypt/: Makefile
libgpg-error/: Makefile
libgpg-error-native/: Makefile
libiconv/: Makefile
libjpeg/: Makefile
libpng/: Makefile
libpthread-stubs/: Makefile
libtiff/: Makefile
libtool-native/: Makefile
libxml2/: Makefile
libxml2-native/: Makefile
libxslt/: Makefile
libxslt-native/: Makefile
m4-native/: Makefile
ncurses/: Makefile
openssl/: Makefile
pkg-config-native/: Makefile
python27/: Makefile
python27-native/: Makefile
readline/: Makefile
sqlite3/: Makefile
zlib/: Makefile
zlib-native/: Makefile
